Plug cli-protonj2 into selftests